# kvm-contract-example

./: Cargo.toml
contracts/empty/: Cargo.toml
contracts/empty/meta/: Cargo.toml
contracts/empty/src/: empty.rs
contracts/empty/wasm/: Cargo.toml
contracts/empty/wasm/src/: lib.rs
