[workspace]
resolver = "2"

members = ["contracts/empty", "contracts/empty/meta"]

[workspace.dependencies.klever-sc]
version = "0.43.3"

[workspace.dependencies.klever-sc-meta]
version = "0.43.3"

[workspace.dev-dependencies.klever-sc-scenario]
version = "0.43.3"

[workspace.dependencies.klever-sc-scenario]
version = "0.43.3"
