[package]
name = "empty"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/empty.rs"

[dependencies.klever-sc]
version = "0.43.3"
workspace = true

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
workspace = true

[dev-dependencies]
num-bigint = "0.4.2"
